# xaml-island-rs-example

./: Cargo.toml  LICENSE  README.md  build.rs
res/: main.xaml
src/: main.rs
winrt-gen/: Cargo.toml  build.rs
winrt-gen/src/: idesktop_window_xaml_source_native.rs  interface.rs  lib.rs
