[package]
name = "winrt-gen"
version = "0.1.0"
authors = ["Gyusun Yeom <omniavinco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "7e34c99" }

[build-dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "7e34c99" }